--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <!-- Materialize CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col s12 center-align">
+                <img src="./images/logo.png" alt="Logo" class="responsive-img" width="280">
+            </div>
+        </div>
+        <div class="row">
+            <!-- Left Column: Registration Form -->
+            <div class="col s12 m6 item">
+                <div style="padding: 0 40px; margin-bottom: 40px;" >
+                    <h5>Register as an IAM user</h5>
+                    <form>
+                        <div class="full-field">
+                            <label for="email">IAM user name</label>
+                            <div class="input-field">
+                                <input id="email" type="email" class="validate" required>
+                            </div>
+
+                            <div class="error">
+                                Error
+                            </div>
+                        </div>
+    
+                        <div class="full-field">
+                            <label for="password">Password</label>
+                            <div class="input-field">
+                                <input id="password" type="password" class="validate" required>
+                            </div>
+
+                            <div class="error">
+                                Error
+                            </div>
+                        </div>
+    
+                        <div class="box justify-content-end">
+                            <button class="btn red waves-effect waves-light custom-button-styles" type="submit">Register</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Right Column: Info Section -->
+            <div class="col s12 m6 item right-column" >
+                <h4 style="margin-bottom: 30px;">Information</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque leo nec magna varius, nec facilisis justo cursus. Integer nec odio nec nulla facilisis tincidunt.</p>
+                <a style="display: flex; flex-direction: row; margin-top: 50px;" href="/" class="href" >
+                    <p style="margin: 0; color: white; text-decoration: none;">Read the blog &nbsp;&nbsp;&nbsp;&nbsp; ></p>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- Materialize JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
