--- a/ui/index.html
+++ b/ui/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="row">
             <!-- Left Column: Registration Form -->
-            <div class="col s12 m6 item">
-                <div style="padding: 0 40px; margin-bottom: 40px;" >
+            <div class="col s12 m12 l6 item">
+                <div class="left-column" >
                     <h5>Register as an IAM user</h5>
                     <form>
                         <div class="full-field">
@@ -53,9 +53,9 @@
             </div>
 
             <!-- Right Column: Info Section -->
-            <div class="col s12 m6 item right-column" >
-                <h4 style="margin-bottom: 30px;">Information</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque leo nec magna varius, nec facilisis justo cursus. Integer nec odio nec nulla facilisis tincidunt.</p>
+            <div class="col s12 m12 l6 item right-column" >
+                <h4 style="margin-bottom: 30px;">4 ways to secure your data in public clouds in 2024</h4>
+                <p>Explore how businesses can enhance data security and sovereignty in the public cloud, offering four proactive strategies amidst ongoing concerns.</p>
                 <a style="display: flex; flex-direction: row; margin-top: 50px;" href="/" class="href" >
                     <p style="margin: 0; color: white; text-decoration: none;">Read the blog &nbsp;&nbsp;&nbsp;&nbsp; ></p>
                 </a>
