--- a/ui/index.html
+++ b/ui/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/popup.css">
 </head>
 <body>
     <div class="container">
@@ -26,7 +27,7 @@
                         <div class="full-field">
                             <label for="email">IAM user name</label>
                             <div class="input-field">
-                                <input id="email" type="email" class="validate" required>
+                                <input id="email" type="email" class="validate">
                             </div>
 
                             <div id="error-email" class="error">
@@ -37,7 +38,7 @@
                         <div class="full-field">
                             <label for="password">Password</label>
                             <div class="input-field">
-                                <input id="password" type="password" class="validate" required>
+                                <input id="password" type="password" class="validate">
                             </div>
 
                             <div id="error-password" class="error">
@@ -62,6 +63,8 @@
             </div>
         </div>
     </div>
+    <!-- Popup for error messages -->
+    <div id="error-popup" class="popup">Error message</div>
     <!-- Materialize JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="scripts/scripts.js"></script>
